# CodeSnippet

./: .gitattributes  .gitignore  LICENSE  README.md  Readme.md
Algorithm/: Brute_Force.cpp  Sieve_Of_Eratosthenes.c  XOR_Linked_List.c  isPalindrome.cpp  isPalindromeNumber.cpp
Algorithm/BinaryTree/: BinaryTree.cpp  BinaryTree.sln
Algorithm/Interview_Of_BinaryTree_Case/: Examination_Of_BinaryTree.java
Algorithm/Search/: Binary_Search.cpp
Algorithm/Sort/: sort.cpp
Algorithm/Tree/: AVL.c  AVL.cpp
Bash/: rename_git_branch.sh
C/: test.c
CPP/: Math_Vec2_test.cpp  UnitTest.hpp  complex.cpp  cppunit.h  function_ptr.cpp  multiply.cpp
CPP/2020/: danglingpointer
CPP/CAN_STL/: library.sln
CPP/GUI/: Util.sln
CPP/LinkedList/: test_linked_list.cpp
CPP/Ref_ptr_test/: Ref_ptr_test.sln
CPP/TEST/: BasicTest.h
CPP/cppFPTest/: cppFPTest.sln
CPP/hash_LRU/: LRUCache.h  LRUCache_test.cpp
CPP/some_thinkwork_wil_be_used/: config.cpp  unittest.cpp  vector.h
CPP/sqlite_test/: a.out  sqlite_test.c  test.db
CPP17/Cpp17ContainersTestCase/: Cpp17ContainersTestCase.sln
CSharp/: TypeOfTest.cs
Cellular_Automata/: Cellular_Automata.pde
Clojure/maze-clj/: CHANGELOG.md  README.md  project.clj
Config/: vscode_user_setting.json
Config/.emacs.d/: init.el
Config/VSCode_Config_Test/: main.cpp
Haskell/: InteractWith.hi  InteractWith.hs  QC.hs  haskell-tut.hs
Haskell/IO/: Filter.hs  Print_test.hs  input.txt
Haskell/Json/: SimpleJSON.hs
Haskell/Prelude/: Enum.hs
Haskell/Sort/: Main.hs
Haskell/my-project/: package.yaml
Java/canftin/: Person.java
Java/matrix/: MatrixGenerator.java  SerialMultiplier.java
Java/test/: Calculator.java  ConsoleClock.java  FileSearch.java  Videoconference.java
MemoryTest/BufferOverTest/: BufferOverTest.sln
MemoryTest/SearchMemoryLeakUseCRT/: SearchMemoryLeakUseCRT.VC.db
MemoryTest/StackOverflowTest/: StackOverflowTest.sln
Nodejs/: data.txt  get.js
Scheme/: define_set_test.scm  lambda.scm
autodiff/: autodiff.go  autodiff_test.go
btree_test/: btree_test.sln
btree_test/Debug/: btree_test.ilk
btree_test/btree_test/: ReadMe.txt  btree_test.cpp  btree_test.vcxproj  btree_test.vcxproj.filters  stdafx.cpp
cmake/Demo1/: main.cc
cmake/Demo2/: CMakeLists.txt
cmake/Demo3/: CMakeLists.txt
cmake/Demo4/: CMakeLists.txt  main.cc
cmake/Demo4/math/: CMakeLists.txt
cmake/Demo5/: build.sh  config.h.in
cmake/algo/: CMakeLists.txt  test.cpp
cmake/curl/: CMakeLists.txt  main.c
cmake/test/: CMakeLists.txt
cmd_colors/: windows-defaults.reg
coq/: first.v  second.v
cpp/: .clang-format  .clang-tidy
cpp/fiber/: CMakeLists.txt
cpp/fiber/include/fiber/: Fiber.hpp
cpp/fiber/include/fiber/c/: base.h  define.h
cpp/graph_ir/: CMakeLists.txt
cpp/hspp/: hspp.h  test_hspp.cpp
cpp/jsonrpc/: CMakeLists.txt
cpp/jsonrpc/include/jsonrpc/: call_type.hpp  config.hpp  dispatcher.hpp  incremental_buffers.hpp  rpc.hpp  server.hpp  utils.hpp
cpp/mini_taskflow/: Executor.h  MsgQueue.cc  MsgQueue.h  Task.cc  Task.h  ThreadPool.h
cpp/mini_workflow/: SubTask.cc  SubTask.h
cpp/mix_rust/: Makefile  my_library.h  test.cpp
cpp/wisp/: math.lisp  wisp.cpp
cpp17testcase/: cpp17testcase.sln
cpp17testcase/cpp17testcase/: cpp17testcase.vcxproj  fold_expressions.cpp  if_constexpr.cpp  inline_variable.cpp  structured_binding_case.cpp  template_class_type_deduction.cpp
cppFPTest/cppFPTest/: cppFPTest.vcxproj
cppTemplateTestCase/: cppTemplateTestCase.sln
cppTemplateTestCase/Debug/: cppTemplateTestCase.ilk
cppTemplateTestCase/cppTemplateTestCase/: cppTemplateTestCase.vcxproj.filters
cpprevisetest/Debug/: cpprevisetest.ilk
cpprevisetest/cpprevisetest/: bignumcase.cpp  computetypecase.cpp  controlstructcase.cpp  cpprevisetest.vcxproj  cpprevisetest.vcxproj.filters  lazyinstantiationcase.cpp  primecase.cpp
go/autodiff/: autodiff.go  go.mod
haskell/: calc.hs
lisp/: foo.lisp
lua/: luac.out
mlir/mlir-tutor/: .clangd  CMakeLists.txt
mysqlConnectTest/: README.md
openglTest/: openglTest.sln
openglTest/Debug/: openglTest.ilk
openglTest/openglTest/: openglTest.vcxproj  openglTest.vcxproj.filters
processing_code/: README.md
processing_code/pangpangball/: pangpangball.pde
processing_code/ripple/: ripple.pde
python/: sina.html
python/DeepLearning/: imdb_test.py
python/fpy/: applicative.py  collection.py  composable.py  either.py  forgetful.py  function.py  functor.py  (+10 more)
python_test_delete/: gen.py  tcp.py  yanghui.py
random_noise/: random_noise.pde
ripple2/: ripple2.pde
ripple3/: ripple3.pde
spiralLine_noise/: spiralLine_noise.pde
test_gprof/: gmon.out  test_gprof_new.c
tree/: tree.pde
young_archive/: README.md  myhttpd.c
young_archive/cmake/Demo5/: CMakeLists.txt
(+391 files in other folders)
